--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,16 @@ plugins {
 group 'com.menmasystems'
 version '1.0'
 
-repositories {
-    jcenter()
+allprojects {
+    repositories {
+        jcenter()
+        maven { url 'https://jitpack.io' }
+    }
 }
 
 dependencies {
     implementation 'com.discord4j:discord4j-core:3.1.1'
-    implementation 'com.sedmelluq:lavaplayer:1.3.50'
+    implementation 'com.github.menmaa:lavaplayer:a4b8b48ed5'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'com.google.api-client:google-api-client:1.23.0'
