Switch to menmaa/lavaplayer master branch

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ allprojects {
 
 dependencies {
     implementation files('libs/Discord4J.jar')
-    implementation 'com.github.menmaa:lavaplayer:a4b8b48ed5'
+    implementation 'com.github.menmaa:lavaplayer:master-SNAPSHOT'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'com.google.api-client:google-api-client:1.23.0'
