--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,13 @@ version '0.1.2'
 allprojects {
     repositories {
         jcenter()
-        maven { url 'https://jitpack.io' }
+        maven { url 'https://m2.dv8tion.net/releases' }
     }
 }
 
 dependencies {
-    implementation files('libs/Discord4J.jar')
-    implementation 'com.sedmelluq:lavaplayer:1.3.53'
+    implementation 'com.discord4j:discord4j-core:3.1.5'
+    implementation 'com.sedmelluq:lavaplayer:1.3.76'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'ch.qos.logback:logback-classic:1.2.3'
     implementation 'com.google.api-client:google-api-client:1.23.0'
