--- a/build.gradle
+++ b/build.gradle
@@ -3,21 +3,21 @@ plugins {
 }
 
 group 'com.menmasystems'
-version '0.1.2'
+version '0.2'
 
 allprojects {
     repositories {
-        jcenter()
         maven { url 'https://m2.dv8tion.net/releases' }
+        mavenCentral()
     }
 }
 
 dependencies {
-    implementation 'com.discord4j:discord4j-core:3.1.5'
-    implementation 'com.sedmelluq:lavaplayer:1.3.76'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'ch.qos.logback:logback-classic:1.2.3'
-    implementation 'com.google.api-client:google-api-client:1.23.0'
-    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
-    implementation 'com.google.apis:google-api-services-youtube:v3-rev212-1.25.0'
+    implementation 'com.discord4j:discord4j-core:3.2.0'
+    implementation 'com.sedmelluq:lavaplayer:1.3.78'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'ch.qos.logback:logback-classic:1.2.6'
+    implementation 'com.google.api-client:google-api-client:1.32.2'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.32.1'
+    implementation 'com.google.apis:google-api-services-youtube:v3-rev20210915-1.32.1'
 }
