--- a/build.gradle
+++ b/build.gradle
@@ -7,16 +7,18 @@ version '0.1.2'
 
 allprojects {
     repositories {
-        jcenter()
-        maven { url 'https://m2.dv8tion.net/releases' }
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.lavalink.dev/releases" }
     }
 }
 
 dependencies {
-    implementation 'com.discord4j:discord4j-core:3.1.5'
-    implementation 'com.sedmelluq:lavaplayer:1.3.76'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'ch.qos.logback:logback-classic:1.2.3'
+    implementation 'com.discord4j:discord4j-core:3.2.7'
+    implementation 'dev.lavalink.youtube:v2:1.12.0'
+    implementation 'dev.arbjerg:lavaplayer:2.2.3'
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'ch.qos.logback:logback-classic:1.4.12'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     implementation 'com.google.apis:google-api-services-youtube:v3-rev212-1.25.0'
