--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'com.menmasystems'
@@ -14,12 +15,29 @@ allprojects {
 }
 
 dependencies {
-    implementation 'com.discord4j:discord4j-core:3.2.7'
-    implementation 'dev.lavalink.youtube:v2:1.12.0'
-    implementation 'dev.arbjerg:lavaplayer:2.2.3'
+    implementation 'com.discord4j:discord4j-core:3.2.8'
+    implementation 'dev.lavalink.youtube:v2:1.13.3'
+    implementation 'dev.arbjerg:lavaplayer:2.2.4'
     implementation 'com.google.code.gson:gson:2.8.9'
-    implementation 'ch.qos.logback:logback-classic:1.4.12'
+    implementation 'ch.qos.logback:logback-classic:1.5.13'
     implementation 'com.google.api-client:google-api-client:1.23.0'
     implementation 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
     implementation 'com.google.apis:google-api-services-youtube:v3-rev212-1.25.0'
+}
+
+application {
+    mainClass = 'com.menmasystems.menmudiscordbot.Menmu'
+}
+
+jar {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    manifest {
+        attributes 'Main-Class': application.mainClass
+    }
+
+    dependsOn configurations.runtimeClasspath
+    from {
+        configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { zipTree(it) }
+    }
 }
