--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,7 @@ on:
 
 env:
   AWS_REGION: us-east-1
+  ECR_REGISTRY_ALIAS: i4h9h7p4
   ECR_REPOSITORY_NAME: menmu-discord-bot
   ECR_IMAGE_TAG: latest
 
@@ -56,7 +57,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY_NAME }}:${{ env.ECR_IMAGE_TAG }}
+          tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REGISTRY_ALIAS }}/${{ env.ECR_REPOSITORY_NAME }}:${{ env.ECR_IMAGE_TAG }}
           platforms: linux/amd64
           provenance: false
           cache-from: type=gha
