--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 
 env:
+  APP_NAME: menmu-discord-bot
   ECR_REPOSITORY: menma/menmu-discord-bot
   ECR_IMAGE_TAG: preview
 
@@ -47,6 +48,9 @@ jobs:
         with:
           registry-type: public
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -56,8 +60,7 @@ jobs:
           context: .
           push: true
           tags: ${{ steps.login-ecr.outputs.registry }}/${{ env.ECR_REPOSITORY }}:${{ env.ECR_IMAGE_TAG }}
-          platforms: linux/amd64
-          provenance: false
+          platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
@@ -81,14 +84,20 @@ jobs:
           ssh-keyscan -H ${{ secrets.VPS_HOSTNAME }} >> ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
 
-      - name: Pull image
+      - name: Pull & deploy docker image
         env:
           IMAGE: public.ecr.aws/${{ env.ECR_REPOSITORY }}:${{ env.ECR_IMAGE_TAG }}
           VPS_HOSTNAME: ${{ secrets.VPS_HOSTNAME }}
           VPS_USER: ${{ secrets.VPS_USER }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+          YT_API_KEY: ${{ secrets.YT_API_KEY }}
+          YT_OAUTH2_REFRESH_TOKEN: ${{ secrets.YT_OAUTH2_REFRESH_TOKEN }}
         run: |
           ssh ${VPS_USER}@${VPS_HOSTNAME} << 'EOF'
+            set -euo pipefail
             docker pull ${{ env.IMAGE }}
+            docker container rm -f ${{ env.APP_NAME }} 2> /dev/null || true
+            docker run -d --name ${{ env.APP_NAME }} -e BOT_TOKEN=${{ env.BOT_TOKEN }} -e YT_API_KEY=${{ env.YT_API_KEY }} -e YT_OAUTH2_REFRESH_TOKEN=${{ env.YT_OAUTH2_REFRESH_TOKEN }} ${{ env.IMAGE }}
             docker image prune -f
           EOF
     
