--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -103,6 +103,7 @@ jobs:
             export BOT_TOKEN=${{ secrets.BOT_TOKEN }}
             export YT_API_KEY=${{ secrets.YT_API_KEY }}
             export YT_OAUTH2_REFRESH_TOKEN=${{ secrets.YT_OAUTH2_REFRESH_TOKEN }}
+            export WIREGUARD_PRIVATE_KEY=$(curl -s -u token:${{ secrets.NORDVPN_ACCESS_KEY }} https://api.nordvpn.com/v1/users/services/credentials | jq -r .nordlynx_private_key)
           
             docker compose pull
             docker compose up -d
